[LINKER-X] feat: JdbcTemplate을 통한 ReadQuery 줄이기